# common-path-prefix

./: BUILD.bazel  main.go  main_test.go
